- Fixed Pr and Ph not showing in User Settings/User Contact

--- a/conspectorUI/src/main/webapp/apps/conspector/css/style.less
+++ b/conspectorUI/src/main/webapp/apps/conspector/css/style.less
@@ -1748,7 +1748,7 @@ DETAILS VIEW
 	// box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 .cnpSubSectionTitleWrapper{
-	margin-right: 28px;
+	margin-right: 0px;
 	@media
 	only screen and (max-width: 960px){
 		margin-right: 0px;
